--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AP'
 - !lcsh 'English wit and humor -- Periodicals'
+- GITenberg
 title: Punch, Or the London Charivari, Volume 148, January 6th, 1915
 url: http://www.gutenberg.org/ebooks/46829
